fix(overlay): fixes blurry overlay
- rounds pixel values used in `connected-position-strategy`
- replaces percent-based offset with calculated pixel values in
  `global-position-strategy`

closes #932

--- a/src/components/tooltip/tooltip.scss
+++ b/src/components/tooltip/tooltip.scss
@@ -15,7 +15,7 @@ $md-tooltip-padding: 8px;
   padding: 0 $md-tooltip-padding;
   border-radius: 2px;
   font-family: $md-font-family;
-  font-size: 10px;
+  font-size: 11px;
   margin: $md-tooltip-margin;
   height: $md-tooltip-height;
   line-height: $md-tooltip-height;
